# python-microservice

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  nox.py  pyproject.toml  todo.yml
.github/: pull_request_template.md
deployments/: .dockerignore  Dockerfile  docker-compose.yml  entrypoint.sh  release.sh
src/core/: config.py
tests/: conftest.py  test.py
